--- a/app/views/enquiries/_programme_details.html.erb
+++ b/app/views/enquiries/_programme_details.html.erb
@@ -10,6 +10,7 @@ $(function(){
         changeYear: true, 
         dateFormat: "yy-mm-dd",
         yearRange: '1980:2050' });
+      setColorsFromSession();
     })
 
 });
