--- a/app/views/registrations/_details.html.erb
+++ b/app/views/registrations/_details.html.erb
@@ -1,6 +1,6 @@
-<br/><h6>
+<br/><h4 class="htab">
 Education Background
-</h6>
+</h4>
 <ul class="vlsdet">
   <% a = @registration %>
   <% q = @registration.qualification %>
@@ -45,10 +45,12 @@ Education Background
     </li>
 </ul>
 <br/>
-
-<h6>
+<div class="brg0"> </div>
+    <br/>
+    <br/>
+<h4 class="htab">
 English Language Proficiency
-</h6>
+</h4>
 
 
 <ul class="vlsdet">
@@ -84,9 +86,12 @@ English Language Proficiency
 </ul>
 
 <br/>
-<h6>
+<div class="brg0"> </div>
+    <br/>
+    <br/>
+<h4 class="htab">
 Emergency Contact
-</h6>
+</h4>
 
 
 <ul class="vlsdet">
@@ -117,9 +122,12 @@ Emergency Contact
     </li>
 </ul>
 <br/>
-<h6>
+<div class="brg0"> </div>
+    <br/>
+    <br/>
+<h4 class="htab">
 Flight Details
-</h6>
+</h4>
 
 
 <ul class="vlsdet">
@@ -148,3 +156,7 @@ Flight Details
       
     </li>
 </ul>
+<br/>
+<div class="brg0"> </div>
+    <br/>
+    <br/>
