--- a/app/views/shared/error.html.erb
+++ b/app/views/shared/error.html.erb
@@ -1,8 +1,18 @@
-<div>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<div align="center">
+ <%= image_tag "/images/icons/fload.gif" %>
+</div>
+<br/>
+<br/>
+<div align="center">
+<h3>
+  Someone at TeamAlpha is listening to music and taking care of this page.
+</h3>
+</div>
 
-<%= image_tag "/images/icons/fload.gif" %>
-<h1>Under Intensive Care by Experts Who Love Fun</h1>
-</div>
-<div>
-<%= image_tag "/images/b1.jpg" %>
-</div>
+
