--- a/app/assets/stylesheets/multi-select.css
+++ b/app/assets/stylesheets/multi-select.css
@@ -37,10 +37,10 @@
 }
 
 .ms-container .ms-list.ms-focus{
-  border-color: rgba(82, 168, 236, 0.8);
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
-  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
+  border-color: #888a85;
+  -webkit-box-shadow: inset 0 1px 1px #888a85, 0 0 8px #888a85;
+  -moz-box-shadow: inset 0 1px 1px #888a85, 0 0 8px #888a85;
+  box-shadow: inset 0 1px 1px #888a85, 0 0 8px #888a85;
   outline: 0;
   outline: thin dotted \9;
 }
@@ -82,5 +82,5 @@
   cursor: pointer;
   color: #ffffff;
   text-decoration: none;
-  background-color: #0088cc;
+  background-color: #888a85;
 }
