--- a/app/views/enquiries/_assign_to.html.erb
+++ b/app/views/enquiries/_assign_to.html.erb
@@ -1,3 +1,7 @@
+<div class="htab">
+<h6><b>Assign To</b></h6>
+</div>
+<br/>
 <%= form_for(obj) do |f| %>
 <div id="assignto-action" class="action-box">
     <div class="cols">
@@ -7,7 +11,7 @@
                      :id, 
                      :first_name,
                      {:prompt => "--User--"}],"collection_select",1,"Assign To") %>
-           <%= fbox(f,[:audit_comment,size: "2x3"],"text_area",nil,"Comments") %>
+           <%= fbox(f,[:audit_comment,size: "10x3",style: 'width:400px;'],"text_area",nil,"Comments") %>
             <%= f.hidden_field :assigned_by, :value => current_user.id.to_s %>
             
             <%= hidden_field_tag "#{f.object_name}[assign]", "from_action" %>
