--- a/app/views/registrations/_show.html.erb
+++ b/app/views/registrations/_show.html.erb
@@ -45,22 +45,22 @@ $(function(){
                         <li><label>Mobile1</label>: <%= a.mobile1 %></li>
                         <li><label>Mobile2</label>: <%= a.mobile1 %></li>
                         <li><label>Email1</label>: <%= a.email1 %></li>
-                        <li><label>Email2</label>:<%= a.email2 %></li>
+                        <li><label>Email2</label>: <%= a.email2 %></li>
                         </ul>
                     </div>
                     <div class="cl"></div>
                     <br/>
-                    <h6><b>Personal information</b></h6>
+                    <h4 class="htab">Personal information</h4>
                     <ul class="vlsdet">
                     <li><label>Date of Birth</label>: <%= a.date_of_birth %></li>
                     <li><label>Gender</label>: <%= a.gender %></li>
                     <li><label>Nationality</label>: <%= a.country_of_origin.try(:name) %></li>
-                    <li><label>Address</label>: <%= disp0(a,'address') %></li>
+                    <li><label>Address</label>:<%= disp0(a,'address') %></li>
                     <li><label>Home Phone</label>: <%= a.home_phone %></li>
                     <li><label>Work Phone</label>: <%= a.work_phone %></li>
                     </ul>
                     <br/>
-                    <h6><b>Passport & Visa</b></h6>
+                    <h4 class="htab">Passport & Visa</h4>
                     <ul class="vlsdet">
                     <li><label>Passport Number</label>: <%= a.passport_number %></li>
                     <li><label>Passport Valid Till</label>: <%= a.passport_valid_till %></li>
@@ -110,44 +110,49 @@ $(function(){
             </div>
         </div>
 <br/>
-<div class="htab">
-  <h5>
-    Registration Information
-  </h5>
-  <div class="cl"></div>
-</div>
-<br/>
-
-    <% tabs_arr = %w(Course Details Document) %>
-    <div class="newtab-container">
-        <ul class="newtab-menus">
-        <% tabs_arr.each do |i|  %>
-            <% i1 = i.downcase %>
-            <li lang='<%= i1 + "-content" %>' id='<%= i1 %>'><%= i %></li>
-        <% end %>
-        </ul>
-        
-        <% tabs_arr.each do |i|  %>
-            <% i1 = i.downcase %>
-            <div class="newtab-content" id='<%= i1+ "-content" %>'>
-              <%= render i1 %>
-            </div>
-        <% end %>
-        
+<%= image_tag "/images/icons/exchange_top.png",{class: "fr",width: "20", onclick: "$('div#application-display').slideToggle();"} %>
+<div id="application-display">
+    <div class="htab">
+      <h5>
+        Registration Information
+      </h5>
+      <div class="cl"></div>
     </div>
-    
-    
-    <br/><div class="htab">
-        <h5><b>Timeline</b></h5>
-        </div><br/>
-        <div id="scrollboxu"  style="height:440px">    
-        <ul class="vlsdn">
-            <%= render 'enquiries/timeline' %>
-        </ul>
-        </div><br/><br/>
-        
-       <div id="registration_id_div" data-registration_id='<%= a.id %>' data-model_sing='registration' data-model_plu='registrations' >
+    <br/>
+
+        <% tabs_arr = %w(Course Details Document) %>
+        <div class="newtab-container">
+            <ul class="newtab-menus">
+            <% tabs_arr.each do |i|  %>
+                <% i1 = i.downcase %>
+                <li lang='<%= i1 + "-content" %>' id='<%= i1 %>'><%= i %></li>
+            <% end %>
+            </ul>
+            
+            <% tabs_arr.each do |i|  %>
+                <% i1 = i.downcase %>
+                <div class="newtab-content" id='<%= i1+ "-content" %>'>
+                  <%= render i1 %>
+                </div>
+            <% end %>
+            
         </div>
+</div>
+
+<%= image_tag "/images/icons/exchange_top.png",{class: "fr",width: "20", onclick: "$('div#timeline-display').slideToggle();"} %>
+<div id="timeline-display">
+        <br/><div class="htab">
+            <h5><b>Timeline</b></h5>
+            </div><br/>
+            <div id="scrollboxu"  style="height:440px">    
+            <ul class="vlsdn">
+                <%= render 'enquiries/timeline' %>
+            </ul>
+            </div><br/><br/>
+</div>
+           <div id="registration_id_div" data-registration_id='<%= a.id %>' data-model_sing='registration' data-model_plu='registrations' ></div>      
+
+
         <div class="htab">
         <h5><b>Action</b></h5>
         </div>
