new enquiry email

--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -4,6 +4,7 @@ $(function(){
   $(".tab-menus li").removeClass("active-tab");
   $("ul.tab-menus li.new_registration").addClass("active-tab");
   $("ul.tab-menus li.new_registration").attr('data-enquiry_id', '<%= params[:enquiry_id] %>');
+   $("ul.tab-menus li.new_registration").attr('data-note', '<%= params[:note] %>');
   $("ul.tab-menus li.new_registration").trigger("click");
   setColorsFromSession();
   activeMM("registrationsMM");
