--- a/app/views/user_configs/_form.html.erb
+++ b/app/views/user_configs/_form.html.erb
@@ -117,6 +117,14 @@
         <%= f.label :registrations %>
         <%= f.select :def_reg_email, ["email1","email2"] %>
         </div>
+        <div class="fbox">
+        <%= f.label :create_enquiry %>
+        <%= f.select :def_create_enquiry_email, (EmailTemplate.all.map &:name) %>
+        </div>
+        <div class="fbox">
+        <%= f.label :from_email %>
+        <%= f.select :def_from_email, (Smtp.all.map &:name) %>
+        </div>
   </div>
   
   <br/>
