changed by senthil - demo

--- a/app/views/enquiries/_enquiry_information.html.erb
+++ b/app/views/enquiries/_enquiry_information.html.erb
@@ -42,6 +42,9 @@
                     <div class="frbox">
                          <%= go_create(f,"student_source","source_id","name",1) %>  
                     </div>
+                    <div class="frbox">
+                         <%= go_create(f,"contact_type","contact_type_id","name",1) %>  
+                    </div>
                     
                </div>
                <div class="col6">
